--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Privacy Policy</title>
+
+    <!-- Підключення Bootstrap CSS через CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoKwQ1hIv/8A5K5i1AqYjk0z4kR5VvE3C7jJj0aM+0MGpm"
+      crossorigin="anonymous"
+    />
+
+    <!-- Підключення власного CSS -->
+    <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="bg-light text-dark">
+
+<div class="container my-5">
+    <h1 class="mb-4 text-primary">Privacy Policy</h1>
+    <p><strong>Last updated:</strong> June 11, 2025</p>
+
+    <p>This app, developed by Nazar Styranets, does not collect, store, or share any personal user data.</p>
+
+    <h2>1. Data Collection</h2>
+    <p>We do not collect any personal information such as name, email, location, or device data. No user-identifiable information is gathered through this app.</p>
+
+    <h2>2. Third-Party Services</h2>
+    <p>This app does not use any third-party services that collect or share user data.</p>
+
+    <h2>3. Data Security</h2>
+    <p>Since we do not collect any personal information, there is no risk of data being lost, stolen, or misused.</p>
+
+    <h2>4. Children’s Privacy</h2>
+    <p>This app is not directed to children under the age of 13 and does not knowingly collect data from children.</p>
+
+    <h2>5. Contact</h2>
+    <p>If you have any questions or concerns about this privacy policy, please contact us at:</p>
+    <ul>
+        <li>Email: <a href="mailto:nazarsturanec@gmail.com">nazarsturanec@gmail.com</a></li>
+        <li>Developer: Nazar Styranets</li>
+    </ul>
+</div>
+
+<!-- Підключення Bootstrap JS (не обов'язково, але може знадобитись) -->
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+2ni2evfP1z5jvRURy5nJ6QF1z5I"
+  crossorigin="anonymous"
+></script>
 
 </body>
 </html>
